--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,36 @@
   color: #61dafb;
 }
 
+#quote-box{
+  width: 300px;
+  height: 150px;
+  background-color: black;
+  color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+}
+
+button{
+  -ms-flex-item-align: center;
+}
+
+.flexitem {
+  text-align: center;
+}
+
+#author{
+  text-align:right;
+  font-size: 9px;
+}
+#text{
+  font-size: 25px;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
